install/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libvirt-operator
  namespace: libvirt-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: libvirt-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: libvirt-operator
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: libvirt-operator
      containers:
        - name: operator
          image: ghcr.io/karelvanhecke/libvirt-operator
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              port: 8081
              path: /healthz
          readinessProbe:
            httpGet:
              port: 8081
              path: /readyz
