install/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: libvirt-operator
spec:
  selector:
    app.kubernetes.io/name: libvirt-operator
  ports:
    - protocol: TCP
      port: 443
      targetPort: 9443
