install/base/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webhook-allow-apiserver
  namespace: libvirt-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: libvirt-operator
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - podSelector:
            matchLabels:
              component: kube-apiserver
              tier: control-plane
    - ports:
        - port: 9443
          protocol: TCP
